Fix vertical alignment on individual info pages

--- a/app/assets/stylesheets/puavo2013/layout.styl
+++ b/app/assets/stylesheets/puavo2013/layout.styl
@@ -223,6 +223,9 @@ caption
     padding 0
 // end of .maincontent
 
+.basic-info td
+    vertical-align top
+
 // .tools ->
 .tools-container
   float right
